Spinnerを追加、スタイリング等を調整

--- a/src/styles/Prefectures.module.css
+++ b/src/styles/Prefectures.module.css
@@ -1,7 +1,12 @@
+.label {
+  cursor: pointer;
+}
+
 .list {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, auto);
   justify-items: start;
   justify-content: space-around;
+  max-width: 800px;
 }
